--- a/Gaoxi-User/src/main/resources/application-test.properties
+++ b/Gaoxi-User/src/main/resources/application-test.properties
@@ -2,13 +2,13 @@ logging.level.root=info
 logging.file=gaoxi-log/user-log.log
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://172.17.0.9:3306/gaoxi?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/gaoxi?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
-spring.datasource.password = jishimen.2018
+spring.datasource.password = root
 
 ## Dubbo 服务提供者配置
 spring.dubbo.application.name=user-provider
-spring.dubbo.registry.address=zookeeper://172.17.0.2:2181
+spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
 spring.dubbo.scan=com.gaoxi.user.service
